--- a/ProjectEuler/ProjectEuler.vcxproj
+++ b/ProjectEuler/ProjectEuler.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Problem3\problem3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Problem3\problem3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
