--- a/ProjectEuler/ProjectEuler.vcxproj
+++ b/ProjectEuler/ProjectEuler.vcxproj
@@ -132,8 +132,12 @@
     <ClCompile Include="problem_0xx\problem_00x\problem_002.cpp" />
     <ClCompile Include="problem_0xx\problem_00x\problem_003.cpp" />
     <ClCompile Include="problem_0xx\problem_00x\problem_005.cpp" />
+    <ClCompile Include="problem_0xx\problem_00x\problem_006.cpp" />
+    <ClCompile Include="problem_0xx\problem_00x\problem_008.cpp" />
+    <ClCompile Include="problem_0xx\problem_01x\problem_012.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="problem_0xx\problem_01x\problem_01x.hpp" />
     <ClInclude Include="problem_0xx\problem_0xx.hpp" />
     <ClInclude Include="problem_0xx\problem_00x\problem_00x.hpp" />
   </ItemGroup>
