--- a/ProjectEuler/ProjectEuler.vcxproj
+++ b/ProjectEuler/ProjectEuler.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="problem_0xx\problem_00x\problem_006.cpp" />
     <ClCompile Include="problem_0xx\problem_00x\problem_008.cpp" />
     <ClCompile Include="problem_0xx\problem_01x\problem_012.cpp" />
+    <ClCompile Include="problem_0xx\problem_01x\problem_015.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="problem_0xx\problem_01x\problem_01x.hpp" />
